# act-ai-engine

./: .gitignore  pyproject.toml
act-ai-engine/: crew.py  main.py
act-ai-engine/config/: agents.yaml  tasks.yaml
act-ai-engine/tools/: coingecko_tool.py  yahoo_finance_tool.py
db/: chroma.sqlite3
src/act_ai_engine_crew/: .env  README.md  main.py
src/act_ai_engine_crew/config/: agents.yaml  tasks.yaml
src/act_ai_engine_crew/crew/: crew.py
src/act_ai_engine_crew/tools/: coingecko_tool.py  yahoo_finance_tool.py  yahoo_finance_tool_2.py
